# cmake-library-example

./: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
include/yourlib/: yourlib.hpp
src/: CMakeLists.txt
